--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <a href="https://www.linkedin.com/in/marica-perone-b9158b1b8"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/p/CFj9bntqpxgtJdbJ6ym4jx5g6snf78WkULkDVQ0/?igshid=1w6xd4vwblhi4">  <i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github cerchio" ></i></a>
+        <a href="https://github.com/marica312/portflio-"><i class="fab fa-github cerchio" ></i></a>
       </div>
 
     </footer>
